--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -30,6 +30,16 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
+em {
+    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    color: #222;
+    font-size: 13px;
+    background-color: #FEF3BE;
+    border: solid 1px #dbe7f3;
+    padding: 0 3px;
+}
+
 ol, ul {
 	list-style: none;
 }
